RM-3344: Add key capsule expiry time to open API and expiry configuration
